[package]
name = "tcpstream-play"
version = "0.1.0"
authors = ["Stanimal <sdbondi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.22"
futures = "0.1.28"
tower = "0.1.1"
tower-service = "0.2.0"
tower-layer = "0.1.0"
tower-util = "0.1.0"
bytes = "0.4.12"
